# yaFyaml

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.md  README.md  YAFYAML.mk.in  YAFYAMLConfig-version.cmake.in  YAFYAMLConfig.cmake.in
.github/workflows/: main.yml
Examples/: CMakeLists.txt
Examples/Iterators/: CMakeLists.txt  animal.yaml  iterator.F90  iterator.yaml
Examples/JSON/: CMakeLists.txt
Examples/JSON/integer-array/: CMakeLists.txt  integer-array.json  test-integer-array.f90
Examples/JSON/nested-object-array/: CMakeLists.txt  nested-object-array.json  test-nested-object-array.f90
Examples/JSON/trivial/: CMakeLists.txt  test-trivial.f90  trivial.json
Examples/Simple/: CMakeLists.txt  simple.F90  simple.yaml  simple2.F90  simple2.yaml
Examples/Trivial/: CMakeLists.txt  trivial.F90  trivial.yaml
cmake/: GNU.cmake  IntelLLVM.cmake  NAG.cmake  YAFYAML.cmake
include/: error_handling.h  string_handling.h
src/: AbstractFile.F90  AbstractSchema.F90  AbstractStream.F90  AbstractTextStream.F90  ArrayWrapper.F90  CMakeLists.txt  Configuration.F90  ConfigurationIterator_implementation.F90  Configuration_implementation.F90  CoreSchema.F90  ErrorCodes.F90  ErrorHandling.F90  EscapedTextStream.F90  FailsafeSchema.F90  File.F90  FileStream.F90  GFTL_Parser.F90  IntegerSimpleKeyMap.F90  JSONSchema.F90  KeywordEnforcer.F90  Lexer.F90  NewConfiguration.F90  NewParser.F90  None.F90  OrderedStringUnlimitedMap.F90  Parser.F90  ParserState.F90  Reader.F90  Scanner.F90  SimpleKey.F90  String.F90  StringNodeMap.F90  StringStream.F90  StringUnlimitedPointerMap.F90  TextStream.F90  Throw.F90  TokenVector.F90  Tokens.F90  UnlimitedUtilities.F90  YAML_Node.F90  (+9 more)
src/Nodes/: AbstractNode.F90  BaseNode.F90  BaseNode_implementation.F90  BoolNode.F90  BoolNode_implementation.F90  FloatNode.F90  FloatNode_implementation.F90  IntNode.F90  IntNode_implementation.F90  Mapping.F90  MappingNode.F90  MappingNode_implementation.F90  NodeNodeOrderedMap.F90  NodeVector.F90  Nodes.F90  NullIterator.F90  Sequence.F90  SequenceNode.F90  SequenceNode_implementation.F90  StringNode.F90  StringNode_implementation.F90  Types.F90  VectorNode.F90  YAML_Node.F90  newMapping.F90  newMappingNode.F90  newMappingNode_implementation.F90
tests/: CMakeLists.txt  InitializeTests.F90  MockFile.F90  Test_BoolNode.pf  Test_ComplexNode.pf  Test_Configuration_anchors.pf  Test_Configuration_casting.pf  Test_Configuration_dump.pf  Test_CoreSchema.pf  Test_File.pf  Test_FileStream.pf  Test_FloatNode.pf  Test_IntNode.pf  Test_Iterators.pf  Test_JSONSchema.pf  Test_Lexer.pf  Test_MappingNode.pf  Test_NewParser.pf  Test_Node_Set.pf  Test_Parser.pf  Test_Reader.pf  Test_SequenceNode.pf  Test_StringNode.pf  Test_UnlimitedUtilities.pf  Test_YAML_Node_Set.pf  Test_YAML_Parser.pf  Test_newParser.pf  demo.F90  is_int.F90  standalone.F90
tools/: ci-install-gfe.bash  travis-install-gfe.bash
